# ai-gateway

./: .dockerignore  .env.example  .gitattributes  .gitignore  .goreleaser.yaml  CHANGELOG.md  Dockerfile  Dockerfile.goreleaser  Makefile  README.md  README.zh.md  docker-compose.monitoring.yml  docker-compose.yml  go.mod  go.sum  mock_llm.py
.github/: dependabot.yml
.github/workflows/: auto-format.yml  ci.yml  update-changelog.yml
cmd/aigw/: main.go
cmd/luner/: main.go
config/: config.example.yaml
deployments/demo/: config.demo.yaml  docker-compose.demo.yml  mock_llm.py  seed-data.py
deployments/production/: config.prod.yaml  docker-compose.prod.yml
examples/python-client-test/: run.ps1  run.sh
grafana/: luner-dashboard.json  prometheus-datasource.yml
grafana/dashboards/: luner-dashboard.json
internal/api/: dashboard.go  errors.go  live_metrics.go  policies.go  server.go  traces.go
internal/cache/: lru.go  observer.go
internal/config/: config.go  watcher.go
internal/console/: embed.go
internal/metrics/: collector.go  snapshot.go
internal/policy/: engine.go  engine_test.go  (+1 more)
monitoring/: prometheus.yml  tempo.yaml
scripts/: bench.ps1  bench.sh  generate-changelog.sh  test-policy-demo.sh  test-product-demo.sh  test-trace-e2e.sh
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: basic_usage.py  langchain_example.py  with_spans.py
sdk/python/luner/: __init__.py  context.py  instrumentation.py  propagator.py  spans.py  version.py
sdk/python/tests/: test_context.py  test_instrumentation.py  test_integration.py  test_propagator.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+34 files in other folders)
